Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
int sg_Animation_AnimationCurrentCell(void *anim);
int sg_Animation_AnimationEnded(void *anim);
int sg_Animation_AnimationEnteredFrame(void *anim);
float sg_Animation_AnimationFrameTime(void *anim);
int sg_Animation_AnimationIndex(void *temp, char *name);
void sg_Animation_AnimationName(void *temp, int idx, char *result);
animation_template sg_Animation_AnimationTemplateNamed(char *name);
void sg_Animation_AssignAnimation(void *anim, int idx, void *frames);
void sg_Animation_AssignAnimationNamed(void *anim, char *name, void *frames);
void sg_Animation_AssignAnimationNamedWithSound(void *anim, char *name, void *frames, int withSound);
void sg_Animation_AssignAnimationWithSound(void *anim, int idx, void *frames, int withSound);