ScreenSaver/lib/sgsdk.pas

//
// Generated by SGWrapperGen - DO NOT EDIT!
//
// SwinGame exported library
//
{$I sgTrace.inc}

library SGSDK;
  uses SysUtils, Strings, sgTrace, sgShared,
    sgTimers, sgPhysics, sgCharacters, sgAudio, sgImages, SDL, sgAnimations, SDL_TTF, SDL_Image, sgInput, sgTypes, sgGraphics, sgGeometry, sgText, SDL_Mixer, sgCore, sgResources, sgCamera, sgSprites;
  
  // The exception trap is used to ensure that exceptions do not propagate beyond the
  // library boundary.
  procedure TrapException(exc: Exception; fromMethod: String);
  begin
    HasException := true;
    
    if Assigned(exc) then
      ErrorMessage := 'Error from ' + fromMethod + ' - ' + exc.Message
    else
      ErrorMessage := 'Unknown error from ' + fromMethod;
      
    {$IFDEF TRACE}
      Trace('SGSDK.dll', 'Error', fromMethod, ErrorMessage);
    {$ENDIF}
  end;
  
  // The following routines are used to copy array data
  procedure TriCopyToPtr(tri: Point2DPtr; const fromTri: Triangle);
  var
    i: LongInt;
  begin
    for i := 0 to 2 do
    begin
      (tri + i)^ := fromTri[i];
    end;
  end;
  
  procedure TriCopyFromPtr(var toTri: Triangle; tri: Point2DPtr);
  var
    i: LongInt;
  begin
    for i := 0 to 2 do
    begin
      toTri[i] := (tri + i)^;
    end;
  end;
  
  procedure MatrixCopyToPtr(matrix: SinglePtr; const fromMatrix: Matrix2D);
  var
    i, j: LongInt;
  begin
    //WriteLn('************************');
    for i := 0 to 2 do
    begin
      //Write('|  ');
      for j := 0 to 2 do
      begin
        //Write(fromMatrix[i,j]:4:2, '  ');
        (matrix + (i * 3) + j)^ := fromMatrix[i,j];
        //matrix[i,j] := fromMatrix[i,j];
      end;
      //Writeln('|');
    end;
    //WriteLn('************************');
  end;
  
  procedure MatrixCopyFromPtr(var toMatrix: Matrix2D; matrix: SinglePtr);
  var
    i, j: LongInt;
  begin
    //WriteLn('************************');
    for i := 0 to 2 do
    begin
      //Write('|  ');
      for j := 0 to 2 do
      begin
        toMatrix[i,j] := (matrix + (i * 3) + j)^;
        //toMatrix[i,j] := matrix[i,j];
        
        //Write(toMatrix[i,j]:4:2, '  ');
      end;
      //Writeln('|');
    end;
    //WriteLn('************************');
  end;
  
  procedure LineCopyFromPtr(data: LineSegmentPtr; len: LongInt; out arr: LinesArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');

    SetLength(arr, len);

    for i := 0 to len - 1 do
    begin
      arr[i] := (data + i)^;
    end;
  end;
  
  procedure LineCopyToPtr(const arr: LinesArray; len: LongInt; data: LineSegmentPtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      (data + i)^ := arr[i];
    end;
  end;
  
  procedure TriangleCopyFromPtr(data: TrianglePtr; len: LongInt; out arr: TriangleArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');

    SetLength(arr, len);

    for i := 0 to len - 1 do
    begin
      arr[i] := (data + i)^;
    end;
  end;
  
  procedure TriangleCopyToPtr(const arr: TriangleArray; len: LongInt; data: TrianglePtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      (data + i)^ := arr[i];
    end;
  end;
  
  procedure BmpCopyFromPtr(bmp: BitmapPtr; len: LongInt; out arr: BitmapArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');

    SetLength(arr, len);

    for i := 0 to len - 1 do
    begin
      arr[i] := (bmp + i)^;
    end;
  end;
  
  procedure BmpCopyToPtr(const arr: BitmapArray; len: LongInt; bmp: BitmapPtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      (bmp + i)^ := arr[i];
    end;
  end;
  
  procedure LongIntCopyFromPtr(data: LongIntPtr; len: LongInt; out arr: LongIntArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');

    SetLength(arr, len);

    for i := 0 to len - 1 do
    begin
      arr[i] := (data + i)^;
    end;
  end;
  
  procedure LongIntCopyToPtr(const arr: LongIntArray; len: LongInt; data: LongIntPtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      (data + i)^ := arr[i];
    end;
  end;
  
  procedure Point2DCopyFromPtr(data: Point2DPtr; len: LongInt; out arr: Point2DArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');
    
    SetLength(arr, len);
    
    for i := 0 to len - 1 do
    begin
      arr[i] := (data + i)^;
    end;
  end;
  
  procedure Point2DCopyToPtr(const arr: Point2DArray; len: LongInt; data: Point2DPtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      (data + i)^ := arr[i];
    end;
  end;
  
  procedure StringCopyFromPtr(str: StringPtr; len: LongInt; out arr: StringArray);
  var
    i: LongInt;
  begin
    if len < 0 then raise Exception.Create('Length of array cannot be negative');
    
    SetLength(arr, len);
    
    for i := 0 to len - 1 do
    begin
      StrCopy(PChar(arr[i]), PChar((str + i)^));
    end;
  end;
  
  procedure StringCopyToPtr(const arr: StringArray; len: LongInt; str: StringPtr);
  var
    i: LongInt;
  begin
    if len < Length(arr) then raise Exception.Create('Error in array size to call expected length to be ' + IntToStr(len));
    
    for i := Low(arr) to High(arr) do
    begin
      StrCopy(PChar((str + i)^), PChar(arr[i]));
    end;
  end;
  
  function sg_Animation_AnimationCurrentCell(anim: Animation): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationCurrentCell');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationCurrentCell(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationCurrentCell');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationCurrentCell');
    {$ENDIF}
  end;
  
  function sg_Animation_AnimationEnded(anim: Animation): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationEnded');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationEnded(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationEnded');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationEnded');
    {$ENDIF}
  end;
  
  function sg_Animation_AnimationEnteredFrame(anim: Animation): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationEnteredFrame');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationEnteredFrame(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationEnteredFrame');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationEnteredFrame');
    {$ENDIF}
  end;
  
  function sg_Animation_AnimationFrameTime(anim: Animation): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationFrameTime');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationFrameTime(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationFrameTime');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationFrameTime');
    {$ENDIF}
  end;
  
  function sg_Animation_AnimationIndex(temp: AnimationTemplate; name: PChar): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationIndex');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationIndex(temp, name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationIndex');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationIndex');
    {$ENDIF}
  end;
  
  procedure sg_Animation_AnimationName(temp: AnimationTemplate; idx: LongInt; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationName');
    {$ENDIF}
    
    try
      result_temp := sgAnimations.AnimationName(temp, idx);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationName');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationName');
    {$ENDIF}
  end;
  
  function sg_Animation_AnimationTemplateNamed(name: PChar): AnimationTemplate; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AnimationTemplateNamed');
    {$ENDIF}
    
    try
      result := sgAnimations.AnimationTemplateNamed(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AnimationTemplateNamed');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AnimationTemplateNamed');
    {$ENDIF}
  end;
  
  procedure sg_Animation_AssignAnimation(anim: Animation; idx: LongInt; frames: AnimationTemplate); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AssignAnimation');
    {$ENDIF}
  
    try 
      sgAnimations.AssignAnimation(anim, idx, frames);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AssignAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AssignAnimation');
    {$ENDIF}
  end;
  
  procedure sg_Animation_AssignAnimationNamed(anim: Animation; name: PChar; frames: AnimationTemplate); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AssignAnimationNamed');
    {$ENDIF}
  
    try 
      sgAnimations.AssignAnimation(anim, name, frames);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AssignAnimationNamed');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AssignAnimationNamed');
    {$ENDIF}
  end;
  
  procedure sg_Animation_AssignAnimationNamedWithSound(anim: Animation; name: PChar; frames: AnimationTemplate; withSound: Boolean); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AssignAnimationNamedWithSound');
    {$ENDIF}
  
    try 
      sgAnimations.AssignAnimation(anim, name, frames, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AssignAnimationNamedWithSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AssignAnimationNamedWithSound');
    {$ENDIF}
  end;
  
  procedure sg_Animation_AssignAnimationWithSound(anim: Animation; idx: LongInt; frames: AnimationTemplate; withSound: Boolean); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_AssignAnimationWithSound');
    {$ENDIF}
  
    try 
      sgAnimations.AssignAnimation(anim, idx, frames, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_AssignAnimationWithSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_AssignAnimationWithSound');
    {$ENDIF}
  end;
